# slack_ai_virtual_assistant

./: .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/: routes.py
app/config/: config.py  dependencies.py
app/integrations/: firestore.py  gemini.py  mongodb.py  slack_app.py  slack_client.py
app/interfaces/: conversation_repository.py  llm_chat.py
app/static/: llm_initial_context.json
app/use_cases/: __init__.py  daily_prompt.py  slack_chat.py  slack_installation.py
tests/: README.md  __init__.py  mocks.py
tests/api/: test_routes.py
tests/config/: conftest.py
tests/integrations/: test_gemini.py
tests/use_cases/: test_daily_prompt.py  test_slack_chat.py  test_slack_installation.py
utils/cron_jobs/: daily_cloud_scheduler.yaml
utils/scripts/: firebase_fetcher.py  gemini_chat_with_storage.py  gemini_generative_chat.py
